--- a/index.html
+++ b/index.html
@@ -275,10 +275,9 @@
       <h3>Thanks for reading! :)</h3>
       <p>I hope you've enjoyed this small dive into the nitty gritty!</p>
 
-      <h3>And thanks to all of the following for amazing resources:</h3>
+      <h3 id="Thanks">And thanks to all of the following for amazing resources:</h3>
       <p>
         TODO: create li styling and do attributions (ALL SOURCES) <br />
-        REMEMBER TO HREF CORRECLY ON GITHUB TO THIS SECTION
       </p>
     </div>
 
