Add credits to v86

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 
       <h2>A sincere thank you</h2>
       <h3>Thanks for reading! :)</h3>
-      <p>I hope you've enjoyed this small dive into the nitty gritty!</p>
+      <p>I hope you've enjoyed this small dive into the nitty-gritty!</p>
 
       <h3 id="thanks">
         And thanks to all of the following for amazing resources:
@@ -382,6 +382,10 @@
             >GCC Cross-Compiler</a
           >
           - information about building a cross-compiler for OS development.
+        </li>
+        <li>
+          <a target="_blank" href="https://github.com/copy/v86">v86</a> - a
+          virtual machine library for the web.
         </li>
       </ul>
       <a href="#top" style="text-align: center; margin-top: 20px"
